<resources>
    <string name="app_name">Court Counter</string>
    <string name="team_a_score">0</string>
    <string name="team_b_score">0</string>
    <string name="team_a">Team A</string>
    <string name="team_b">Team B</string>
    <string name="reset">Reset</string>
    <string name="free_throw">Free Throw</string>
    <string name="points_2">+2 Points</string>
    <string name="points_3">+3 Points</string>
</resources>
