<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="com.example.android.courtcounter.MainActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginEnd="24dp"
        android:layout_marginStart="24dp"
        android:layout_marginTop="16dp"
        android:orientation="horizontal">

        <LinearLayout
            android:id="@+id/column_teamA"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="start"
            android:layout_weight="1"
            android:orientation="vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:fontFamily="sans-serif-medium"
                android:text="@string/team_a"
                android:textColor="#616161"
                android:textSize="14sp" />

            <TextView
                android:id="@+id/team_a_score"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginBottom="24dp"
                android:layout_marginTop="16dp"
                android:fontFamily="sans-serif-light"
                android:text="@string/team_a_score"
                android:textColor="#000000"
                android:textSize="56sp" />

            <Button
                android:id="@+id/a3"
                android:layout_width="wrap_content"
                android:layout_height="36dp"
                android:layout_gravity="center"
                android:layout_margin="8dp"
                android:layout_marginBottom="8dp"
                android:background="#ef912a"
                android:onClick="point3"
                android:paddingBottom="8dp"
                android:paddingEnd="24dp"
                android:paddingStart="24dp"
                android:paddingTop="8dp"
                android:text="@string/points_3" />


            <Button
                android:id="@+id/a2"
                android:layout_width="wrap_content"
                android:layout_height="36dp"
                android:layout_gravity="center"
                android:layout_margin="8dp"
                android:layout_marginBottom="8dp"
                android:background="#ef912a"
                android:onClick="point2"
                android:paddingBottom="8dp"
                android:paddingEnd="24dp"
                android:paddingStart="24dp"
                android:paddingTop="8dp"
                android:text="@string/points_2" />

            <Button
                android:id="@+id/a1"
                android:layout_width="wrap_content"
                android:layout_height="36dp"
                android:layout_gravity="center"
                android:layout_margin="8dp"
                android:background="#ef912a"
                android:onClick="freeThrow"
                android:paddingBottom="8dp"
                android:paddingEnd="16dp"
                android:paddingStart="16dp"
                android:paddingTop="8dp"
                android:text="@string/free_throw"
                android:textAllCaps="true" />

        </LinearLayout>

        <View
            android:layout_width="1dp"
            android:layout_height="match_parent"
            android:background="@android:color/darker_gray" />

        <!--Column Team B-->
        <LinearLayout
            android:id="@+id/column_teamB"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="end"
            android:layout_weight="1"
            android:orientation="vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:fontFamily="sans-serif-medium"
                android:text="@string/team_b"
                android:textColor="#616161"
                android:textSize="14sp" />

            <TextView
                android:id="@+id/team_b_score"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginBottom="24dp"
                android:layout_marginTop="16dp"
                android:fontFamily="sans-serif-light"
                android:text="@string/team_b_score"
                android:textColor="#000000"
                android:textSize="56sp" />

            <Button
                android:id="@+id/b3"
                android:layout_width="wrap_content"
                android:layout_height="36dp"
                android:layout_gravity="center"
                android:layout_margin="8dp"
                android:layout_marginBottom="8dp"
                android:background="#ef912a"
                android:onClick="point3"
                android:paddingBottom="8dp"
                android:paddingEnd="24dp"
                android:paddingStart="24dp"
                android:paddingTop="8dp"
                android:text="@string/points_3" />

            <Button
                android:id="@+id/b2"
                android:layout_width="wrap_content"
                android:layout_height="36dp"
                android:layout_gravity="center"
                android:layout_margin="8dp"
                android:layout_marginBottom="8dp"
                android:background="#ef912a"
                android:onClick="point2"
                android:paddingBottom="8dp"
                android:paddingEnd="24dp"
                android:paddingStart="24dp"
                android:paddingTop="8dp"
                android:text="@string/points_2" />

            <Button
                android:id="@+id/b1"
                android:layout_width="wrap_content"
                android:layout_height="36dp"
                android:layout_gravity="center"
                android:layout_margin="8dp"
                android:background="#ef912a"
                android:onClick="freeThrow"
                android:paddingBottom="8dp"
                android:paddingEnd="16dp"
                android:paddingStart="16dp"
                android:paddingTop="8dp"
                android:text="@string/free_throw"
                android:textAllCaps="true" />

        </LinearLayout>

    </LinearLayout>

    <!--Reset-->
    <RelativeLayout
        android:id="@+id/reset"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <Button
            android:layout_width="wrap_content"
            android:layout_height="36dp"
            android:layout_alignParentBottom="true"
            android:layout_centerHorizontal="true"
            android:layout_marginBottom="32dp"
            android:background="#ef912a"
            android:onClick="reset"
            android:padding="8dp"
            android:text="@string/reset"
            android:textAllCaps="true" />
    </RelativeLayout>


</LinearLayout>
